rustflags= ["-C", "target-cpu=native"]

[package]
name = "sdf-transition"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
gif = "0.13.1"
image = { version = "0.25.5", features = ["rayon"] }
itertools = "0.14.0"
radsort = "0.1.1"
rayon = "1.10.0"


